2012-05-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSFunctions.c: Fixed bug in GSBSearch ().
	* Source/CFAttributedString.c: Implemented mutable attributed strings.
	* Tests/CFAttributedString/mutable.m: New tests.

2012-05-06 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSFunctions.c: (GSBSearch) Return index of array item
	including value.
	* Source/CFTimeZone.c: Adapt to this change and fix time 
	calculation bug.
	* Tests/CFTimeZone/general.m: Fix tests.
	* Source/CFAttributedString.c: Added code to copy and create
	mutable instances.
	* Tests/CFAttributedString/general.m: Added more tests.

2012-05-06 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac: Display error if zoneinfo directory cannot be found.
	* Source/CFCalendar.c: Fix CFCalendarGetTimeRangeOfUnit().
	* Tests/CFArray/mutablearray.m:
	* Tests/CFAttributedString/general.m:
	* Tests/CFBinaryHeap/general.m: Avoid compiler warnings.
	* Tests/CFCalendar/basic.m:
	* Tests/CFNumberFormatter/parse.m:
	* Tests/CFNumber/general.m:
	* Tests/CFLocale/displayvalues.m:
	* Tests/CFURL/create.m: Fix tests based on results from OS X.

2012-05-05 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure:
	* configure.ac: Add test for zoneinfo directory.
	* Source/tzfile.h: Remove TZDIR define.
	* Source/config.h.in: Add TZDIR define based on configure's findings.
	* Source/CFTimeZone.c: Search for 
	* Tests/CFTimeZone/general.m: Added a few new tests to CFTimeZone.

2012-05-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFAttributedString.c: Implement CFAttributedStringCreate().
	* Tests/CFAttributedString/: Add simple tests.

2012-04-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c: Fix incompatibility in retain/release.
	* Source/CFLocale.c:
	* Source/CFNumberFormatter.c: Do not release NULL pointer.

2012-04-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Correctly generate time zone data.